site-header-mobile finished

--- a/index.html
+++ b/index.html
@@ -4,12 +4,34 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project</title>
+  <title>Landing | CoffeRoaster</title>
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <div class="container">
+    <!-- SITE-HEADER -->
+    <header class="site-header site-header--open">
+      <a class="logo" href="index.html">
+        <img class="logo__img" src="img/logo.svg" alt="logo of company" width="163" height="18">
+      </a>
+      <button class="site-header__toggler js-site-header__toggler" type="submit" aria-label="navbar toggler"></button>
+      <nav class="sitenav">
+        <ul class="sitenav__list">
+          <li class="sitenav__item">
+            <a class="sitenav__link" href="#">home</a>
+          </li>
+          <li class="sitenav__item">
+            <a class="sitenav__link" href="#">about</a>
+          </li>
+          <li class="sitenav__item">
+            <a class="sitenav__link" href="#">create your plan</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
+  </div>
 
   <script src="js/main.js"></script>
 </body>
