site-header finished

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
   <div class="container">
     <!-- SITE-HEADER -->
-    <header class="site-header site-header--open">
+    <header class="site-header">
       <a class="logo" href="index.html">
         <img class="logo__img" src="img/logo.svg" alt="logo of company" width="163" height="18">
       </a>
-      <button class="site-header__toggler js-site-header__toggler" type="submit" aria-label="navbar toggler"></button>
+      <button class="site-header__toggler js-site-header-toggler" type="button" aria-label="navbar toggler"></button>
       <nav class="sitenav">
         <ul class="sitenav__list">
           <li class="sitenav__item">
@@ -30,7 +30,7 @@
         </ul>
       </nav>
     </header>
-
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus maiores veniam porro dolor consectetur eligendi itaque excepturi quos? Dicta architecto similique beatae molestiae, sit ut quo saepe praesentium quod. Accusamus magnam eligendi quidem dolor odio error voluptatem voluptatibus optio ab numquam ad commodi voluptate fugiat in, harum, dolorum nobis officiis minima? Pariatur sint assumenda debitis sequi doloremque alias quasi possimus, dolorum perspiciatis laudantium amet eum dolorem a consequuntur quas reiciendis exercitationem nesciunt deserunt est. Error qui similique iure ut officia ducimus omnis inventore quasi praesentium tempora, vero quam voluptates magni ex ipsam non. Quas, debitis doloribus? Quidem cumque quasi et doloremque ab sit vitae eaque consequuntur veniam harum. Velit ad repudiandae quidem, magni aperiam dolorum architecto obcaecati laudantium quibusdam, nesciunt deleniti sed voluptatem officiis in recusandae totam quis praesentium debitis alias quod voluptates, doloribus cumque. Iusto labore quia ullam pariatur numquam maiores eligendi libero nulla cum, architecto ratione possimus. Voluptatibus laborum neque optio quaerat repellat minus? Ea, non autem possimus neque facilis adipisci atque minima ipsum officiis veniam, earum deleniti? Et quam provident laudantium dignissimos itaque porro sint magni sit iste. Quidem atque non velit fugiat laboriosam eveniet est quo, tenetur nam quos eum repellendus pariatur, et recusandae vitae distinctio suscipit facilis perspiciatis ipsa qui molestiae numquam consequuntur. Assumenda obcaecati modi vitae pariatur id distinctio et nesciunt, fugiat laborum ea eaque molestias quas voluptate quos nemo, tempore amet eos illo. Alias explicabo numquam sequi! At neque aliquid et corrupti possimus quia modi voluptatibus sequi, consectetur vel id, ullam non, officiis porro. Alias vitae esse officia iste rem deleniti repellendus doloribus sunt nam, obcaecati quasi odit sapiente nemo libero? Quibusdam iusto omnis ipsum, dolore ducimus debitis pariatur, inventore magnam, deleniti sint dolorem maxime accusantium similique voluptatibus molestias nulla provident ut! Commodi minus odio unde esse ad itaque repellendus beatae quae nisi quibusdam quas, eaque ullam minima neque eum, recusandae, accusantium aliquid perferendis possimus a officia nulla veniam. Cumque quidem doloremque laboriosam iure, non nesciunt, dignissimos deserunt iste necessitatibus quaerat ut corporis impedit dolorum, molestias debitis fuga id dolor! Magnam exercitationem debitis officia sit. Hic voluptatem aperiam maxime. Deserunt nobis animi itaque amet accusantium impedit perspiciatis quidem odio sunt libero quo velit, tempora soluta distinctio nam ea quos voluptatem. Ad amet laborum eos laudantium eaque, minus, unde eius cumque, cupiditate molestias dolor. Distinctio officia eos sed modi sapiente culpa mollitia exercitationem, cupiditate consequatur impedit laudantium placeat ratione repellat error fugit eveniet maxime blanditiis asperiores veritatis nisi soluta ut? Repudiandae iusto quas dolorem debitis harum dolor, ipsam perferendis excepturi ab fuga laboriosam saepe incidunt dolore veritatis dolorum voluptates temporibus corporis molestiae sunt, magni, adipisci reprehenderit error blanditiis obcaecati? Quod delectus dicta, reiciendis error architecto at quas, temporibus voluptates laudantium vel quia. Est veniam hic facere asperiores ratione quia quam nostrum pariatur quis, voluptatem, voluptatum cupiditate assumenda harum delectus. Facere enim, in laborum dicta asperiores nostrum exercitationem possimus quis maxime qui natus aliquid, velit, expedita odit aliquam nulla quisquam porro cupiditate non inventore quos ipsa. Ipsam repellat magni beatae nobis nulla ea suscipit minima.</p>
   </div>
 
   <script src="js/main.js"></script>
