footer finished mobile desktop tablet

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="page" lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
-  <div class="container">
+<body class="page__body">
+  <div class="page__container container">
     <!-- SITE-HEADER -->
     <header class="site-header">
       <a class="logo" href="index.html">
@@ -48,8 +48,8 @@
         <ul class="collection__list">
           <li class="collection__item coffee">
             <img class="coffee__img" width="200" height="151" src="img/collection-gran-epxresso.png" width="200" height="151"
-              alt="collection coffee gran" srcset="img/collection-gran-epxresso.png 1x,
-              img/collection-gran-epxresso@2x.png 2x">
+            alt="collection coffee gran" srcset="img/collection-gran-epxresso.png 1x,
+            img/collection-gran-epxresso@2x.png 2x">
             <div class="coffee__inner">
               <h3 class="coffee__heading">Gran Espresso</h3>
               <p class="coffee__info">Light and flavorful blend with cocoa and black pepper for an intense experience</p>
@@ -57,8 +57,8 @@
           </li>
           <li class="collection__item coffee">
             <img class="coffee__img" width="200" height="151" src="img/collection-planalto.png" width="200" height="151"
-              alt="collection coffee gran" srcset="img/collection-planalto.png 1x,
-              img/collection-planalto@2x.png 2x">
+            alt="collection coffee gran" srcset="img/collection-planalto.png 1x,
+            img/collection-planalto@2x.png 2x">
             <div class="coffee__inner">
               <h3 class="coffee__heading">Planalto</h3>
               <p class="coffee__info">Light and flavorful blend with cocoa and black pepper for an intense experience</p>
@@ -66,8 +66,8 @@
           </li>
           <li class="collection__item coffee">
             <img class="coffee__img" width="200" height="151" src="img/collection-piccollo.png" width="200" height="151"
-              alt="collection coffee gran" srcset="img/collection-piccollo.png 1x,
-              img/collection-piccollo@2x.png 2x">
+            alt="collection coffee gran" srcset="img/collection-piccollo.png 1x,
+            img/collection-piccollo@2x.png 2x">
             <div class="coffee__inner">
               <h3 class="coffee__heading">Piccollo</h3>
               <p class="coffee__info">Light and flavorful blend with cocoa and black pepper for an intense experience</p>
@@ -75,17 +75,94 @@
           </li>
           <li class="collection__item coffee">
             <img class="coffee__img" width="200" height="151" src="img/collection-danche.png" width="200" height="151"
-              alt="collection coffee gran" srcset="img/collection-danche.png 1x,
-              img/collection-danche@2x.png 2x">
+            alt="collection coffee gran" srcset="img/collection-danche.png 1x,
+            img/collection-danche@2x.png 2x">
             <div class="coffee__inner">
               <h3 class="coffee__heading">Danche</h3>
-              <p class="coffee__info">Light and flavorful blend with cocoa and black pepper for an intense experience</p>
+              <p class="coffee__info">Ethiopian hand-harvested blend densely packed with vibrant fruit notes</p>
             </div>
           </li>
 
         </ul>
       </section>
+
+
+      <section class="features">
+        <div class="features-top">
+          <h2 class="features__heading">Why choose us?</h2>
+          <p class="features__info">A large part of our role is choosing which particular coffees will be featured in our range. This means working closely with the best coffee growers to give you a more impactful experience on every level.</p>
+        </div>
+        <ul class="features__list">
+          <li class="features__item item-feature features__item--quality ">
+            <div class="item-feature__box">
+              <h3 class="item-feature__heading">Best quality</h3>
+              <p class="item-feature__info">Discover an endless variety of the world’s best artisan coffee from each of our roasters.</p>
+            </div>
+          </li>
+          <li class="features__item item-feature features__item--benefits">
+            <div class="item-feature__box">
+              <h3 class="item-feature__heading">Exclusive benefits</h3>
+              <p class="item-feature__info">Special offers and swag when you subscribe, including 30% off your first shipment.</p>
+            </div>
+          </li>
+          <li class="features__item item-feature features__item--shipping">
+            <div class="item-feature__box">
+              <h3 class="item-feature__heading">Free shipping</h3>
+              <p class="item-feature__info">We cover the cost and coffee is delivered fast. Peak freshness: guaranteed.</p>
+            </div>
+          </li>
+        </ul>
+      </section>
+
     </main>
+
+
+    <footer class="footer">
+      <div class="footer__wrapper">
+        <a href="index.html" class="footer__logo logo">
+          <img class="logo__img" src="img/logo-white.svg" width="217" height="24" alt="logo of company">
+        </a>
+        <ul class="footer__list">
+          <li class="footer__item">
+            <a class="footer__link" href="index.html">home</a>
+          </li>
+          <li class="footer__item">
+            <a class="footer__link" href="">about us</a>
+          </li>
+          <li class="footer__item">
+            <a class="footer__link" href="">create your plan</a>
+          </li>
+        </ul>
+
+        <ul class="sc sc__list">
+          <li class="sc__item">
+            <a class="sc__link sc--facebook" href="#" target="_blank">
+              <svg width="25" height="24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path
+                d="M22.7752 0h-21.35C.6932 0 .1002.593.1002 1.325v21.351c0 .731.593 1.324 1.325 1.324h11.495v-9.294h-3.128v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12V24h6.116c.73 0 1.323-.593 1.323-1.325V1.325c0-.732-.593-1.325-1.325-1.325z" />
+              </svg>
+            </a>
+          </li>
+          <li class="sc__item">
+            <a class="sc__link sc--twitter" href="#" target="_blank">
+              <svg width="25" height="20" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path
+                d="M24.1002 2.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195a4.9156 4.9156 0 00-3.594-1.555c-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574a4.903 4.903 0 01-2.229-.616c-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z" />
+              </svg>
+            </a>
+          </li>
+          <li class="sc__item">
+            <a class="sc__link sc--instagram" href="#" target="_blank">
+              <svg width="25" height="24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M12.1002 0c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98C.1142 8.333.1002 8.741.1002 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM5.9382 12c0-3.403 2.759-6.162 6.162-6.162s6.162 2.759 6.162 6.162c0 3.404-2.759 6.163-6.162 6.163s-6.162-2.76-6.162-6.163zm6.162 4c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm4.965-10.405c0-.795.645-1.44 1.441-1.44.795 0 1.439.645 1.439 1.44 0 .795-.644 1.44-1.439 1.44-.796 0-1.441-.645-1.441-1.44z" />
+              </svg>
+            </a>
+          </li>
+        </ul>
+
+      </div>
+    </footer>
 
   </div>
 
