working-process mobile-tablet-desktop finished

--- a/index.html
+++ b/index.html
@@ -114,9 +114,43 @@
         </ul>
       </section>
 
+      <!-- HOW IT WORKS -->
+      <section class="working-process">
+        <h2 class="working-process__heading">How it works</h2>
+        <div class="working-process__circles">
+          <span class="working-process__circle working-process__circle--start"></span>
+          <span class="working-process__circle working-process__circle--middle"></span>
+          <span class="working-process__circle working-process__circle--end"></span>
+        </div>
+        <ol class="working-process__list">
+          <li class="working-proces__item item-process">
+            <div class="item-process__box">
+              <h3 class="item-process__heading">Pick your coffee</h3>
+              <p class="item-process__info">Select from our evolving range of artisan coffees. Our beans are ethically sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to try out.</p>
+            </div>
+          </li>
+          <li class="working-proces__item item-process">
+            <div class="item-process__box">
+              <h3 class="item-process__heading">Pick your coffee</h3>
+              <p class="item-process__info">Select from our evolving range of artisan coffees. Our beans are ethically sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to try out.</p>
+            </div>
+          </li>
+          <li class="working-proces__item item-process">
+            <div class="item-process__box">
+              <h3 class="item-process__heading">Pick your coffee</h3>
+              <p class="item-process__info">Select from our evolving range of artisan coffees. Our beans are ethically sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to try out.</p>
+            </div>
+          </li>
+        </ol>
+
+        <div class="working-process__link-box">
+          <a class="btn btn--primary" href="#">Create your plan</a>
+        </div>
+      </section>
+
     </main>
 
-
+    <!-- FOOTER -->
     <footer class="footer">
       <div class="footer__wrapper">
         <a href="index.html" class="footer__logo logo">
