--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h2 class="collection__heading">our collection</h2>
         <ul class="collection__list">
           <li class="collection__item coffee">
-            <img class="coffee__img" width="200" height="151" src="img/collection-gran-epxresso.png" width="200" height="151"
+            <img class="coffee__img"  src="img/collection-gran-epxresso.png" width="200" height="151"
             alt="collection coffee gran" srcset="img/collection-gran-epxresso.png 1x,
             img/collection-gran-epxresso@2x.png 2x">
             <div class="coffee__inner">
@@ -56,7 +56,7 @@
             </div>
           </li>
           <li class="collection__item coffee">
-            <img class="coffee__img" width="200" height="151" src="img/collection-planalto.png" width="200" height="151"
+            <img class="coffee__img" src="img/collection-planalto.png" width="200" height="151"
             alt="collection coffee gran" srcset="img/collection-planalto.png 1x,
             img/collection-planalto@2x.png 2x">
             <div class="coffee__inner">
@@ -65,7 +65,7 @@
             </div>
           </li>
           <li class="collection__item coffee">
-            <img class="coffee__img" width="200" height="151" src="img/collection-piccollo.png" width="200" height="151"
+            <img class="coffee__img"  src="img/collection-piccollo.png" width="200" height="151"
             alt="collection coffee gran" srcset="img/collection-piccollo.png 1x,
             img/collection-piccollo@2x.png 2x">
             <div class="coffee__inner">
@@ -74,7 +74,7 @@
             </div>
           </li>
           <li class="collection__item coffee">
-            <img class="coffee__img" width="200" height="151" src="img/collection-danche.png" width="200" height="151"
+            <img class="coffee__img" src="img/collection-danche.png" width="200" height="151"
             alt="collection coffee gran" srcset="img/collection-danche.png 1x,
             img/collection-danche@2x.png 2x">
             <div class="coffee__inner">
