--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body class="page__body">
   <div class="page__container container">
+
     <!-- SITE-HEADER -->
     <header class="site-header">
       <a class="logo" href="index.html">
@@ -19,13 +20,13 @@
       <nav class="sitenav">
         <ul class="sitenav__list">
           <li class="sitenav__item">
-            <a class="sitenav__link" href="#">home</a>
+            <a class="sitenav__link" href="index.html">home</a>
           </li>
           <li class="sitenav__item">
-            <a class="sitenav__link" href="#">about</a>
+            <a class="sitenav__link" href="about.html">about</a>
           </li>
           <li class="sitenav__item">
-            <a class="sitenav__link" href="#">create your plan</a>
+            <a class="sitenav__link" href="plan.html">create your plan</a>
           </li>
         </ul>
       </nav>
@@ -161,10 +162,10 @@
             <a class="footer__link" href="index.html">home</a>
           </li>
           <li class="footer__item">
-            <a class="footer__link" href="">about us</a>
+            <a class="footer__link" href="about.html">about us</a>
           </li>
           <li class="footer__item">
-            <a class="footer__link" href="">create your plan</a>
+            <a class="footer__link" href="plan.html">create your plan</a>
           </li>
         </ul>
 
