work process finished

--- a/about.html
+++ b/about.html
@@ -36,12 +36,12 @@
     <main class="site-content">
 
       <!-- ABOUT -->
-      <section class="about">
-        <div class="about__inner">
-          <h1 class="about__heading">About Us</h1>
-          <p class="about__info">Coffeeroasters began its journey of exotic discovery in 1999, highlighting stories of coffee from around the world. We have since been dedicated to bring the perfect cup - from bean to brew - in every shipment.</p>
+      <div class="hero about-hero">
+        <div class="about-hero__inner">
+          <h1 class="about-hero__heading">About Us</h1>
+          <p class="about-hero__info">Coffeeroasters began its journey of exotic discovery in 1999, highlighting stories of coffee from around the world. We have since been dedicated to bring the perfect cup - from bean to brew - in every shipment.</p>
         </div>
-      </section>
+      </div>
 
       <!-- COMMITMENT -->
       <section class="commitnent">
