--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- SITE-CONTENT -->
     <main class="site-content">
       <!-- HERO SECTION -->
-      <div class="hero">
+      <div class="hero index-hero">
         <div class="hero__inner">
           <h1 class="hero__heading">Great coffee made simple.</h1>
           <p class="hero__info">Start your mornings with the world’s best coffees. Try our expertly curated artisan coffees from our best roasters delivered directly to your door, at your schedule</p>
@@ -115,38 +115,36 @@
         </ul>
       </section>
 
-      <!-- HOW IT WORKS -->
-      <section class="working-process">
-        <h2 class="working-process__heading">How it works</h2>
-        <div class="working-process__circles">
-          <span class="working-process__circle working-process__circle--start"></span>
-          <span class="working-process__circle working-process__circle--middle"></span>
-          <span class="working-process__circle working-process__circle--end"></span>
-        </div>
-        <ol class="working-process__list">
-          <li class="working-proces__item item-process">
-            <div class="item-process__box">
-              <h3 class="item-process__heading">Pick your coffee</h3>
-              <p class="item-process__info">Select from our evolving range of artisan coffees. Our beans are ethically sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to try out.</p>
+      <!-- WORK PROCESS -->
+      <section class="work-process">
+        <h2 class="work-process__heading">how it works</h2>
+        <ul class="work-process__list">
+          <li class="work-process__item step-process">
+            <div class="step-process__box">
+              <h3 class="step-process__heading">Pick your <br class="step-process__br"> coffee</h3>
+              <p class="step-process__info">Select from our evolving range of artisan coffees. Our beans are ethically
+                sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to
+                try out.</p>
             </div>
           </li>
-          <li class="working-proces__item item-process">
-            <div class="item-process__box">
-              <h3 class="item-process__heading">Pick your coffee</h3>
-              <p class="item-process__info">Select from our evolving range of artisan coffees. Our beans are ethically sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to try out.</p>
+          <li class="work-process__item step-process">
+            <div class="step-process__box">
+              <h3 class="step-process__heading">Pick your <br class="step-process__br"> coffee</h3>
+              <p class="step-process__info">Select from our evolving range of artisan coffees. Our beans are ethically
+                sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to
+                try out.</p>
             </div>
           </li>
-          <li class="working-proces__item item-process">
-            <div class="item-process__box">
-              <h3 class="item-process__heading">Pick your coffee</h3>
-              <p class="item-process__info">Select from our evolving range of artisan coffees. Our beans are ethically sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to try out.</p>
+          <li class="work-process__item step-process">
+            <div class="step-process__box">
+              <h3 class="step-process__heading">Pick your <br class="step-process__br"> coffee</h3>
+              <p class="step-process__info">Select from our evolving range of artisan coffees. Our beans are ethically
+                sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to
+                try out.</p>
             </div>
           </li>
-        </ol>
-
-        <div class="working-process__link-box">
-          <a class="btn btn--primary" href="#">Create your plan</a>
-        </div>
+        </ul>
+        <a class=" btn-work--process btn btn--primary" href="plan.html">Create your plan</a>
       </section>
 
     </main>
@@ -198,6 +196,8 @@
 
       </div>
     </footer>
+
+
 
   </div>
 
